workink in the layout

--- a/index.html
+++ b/index.html
@@ -58,18 +58,60 @@
 
     <section class="infos">
         <div id="offers">
-            <h2></h2>
-            <p></p>
-            <div id="cinqueterre">
+            <h2 class="offers-explore">Good Offers Right Now</h2>
+            <p class="travel-discount">Up to 50% discount</p>
+            <div id="cinqueterre" class="imagem">
                 <span>Cinque Terre</span>
             </div>
-            <div id="newyork">
+            <div id="newyork" class="imagem">
                 <span>New York</span>
+            </div>
+            <div id="sanfrancisco" class="imagem">
+                <span>San Francisco</span>
+            </div>
+            <div id="pisa" class="imagem">
+                <span>Pisa</span>
+            </div>
+            <div id="paris" class="imagem">
+                <span>Paris</span>
             </div>
         </div>
         <div id="explore">
-            <h2></h2>
-            <p></p>
+            <h2 class="offers-explore">Explore Nature</h2>
+            <p class="travel-discount">Travel with us and see nature at its finest</p>
+            <div>
+                <img src="imagens/ocean.jpg" alt="Ocean Norway">
+                <div class="about-place">
+                    <h3>West Coast, Norway</h3>
+                    <p>Roundtrip from 179</p>
+                    <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                    <p>Buy Tickets</p>
+                </div>
+            </div>
+            <div>
+                <img src="imagens/mountains.jpg" alt="Mountains Austria">
+                <div class="about-place">
+                    <h3>Muntains, Austria</h3>
+                    <p>One-way from 139</p>
+                    <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                    <p>Buy tickets</p>
+                </div>
+            </div>
+        </div>
+        <div id="get-offers">
+            <h2>Get the best offers first!</h2>
+            <p>Join our newsletter.</p>
+            <form action="#">
+                <p>
+                    <label for="cmpEmail">E-mail</label>
+                </p>
+                <p>
+                    <input type="text" name="txtEmail" id="cmpEmail" placeholder="Your email address">
+                </p>
+                <p>
+                    <input type="button" value="Subscribe">
+                </p>
+            </form>
         </div>
     </section>
     
