working in the layout

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <img src="imagens/ocean.jpg" alt="Ocean Norway">
                 <div class="about-place">
                     <h3>West Coast, Norway</h3>
-                    <p>Roundtrip from 179</p>
+                    <p>Roundtrip from $79</p>
                     <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
                     <p>Buy Tickets</p>
                 </div>
@@ -92,7 +92,7 @@
                 <img src="imagens/mountains.jpg" alt="Mountains Austria">
                 <div class="about-place">
                     <h3>Muntains, Austria</h3>
-                    <p>One-way from 139</p>
+                    <p>One-way from $39</p>
                     <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
                     <p>Buy tickets</p>
                 </div>
@@ -113,7 +113,35 @@
                 </p>
             </form>
         </div>
+        <div id="contact">
+            <h2>Contact</h2>
+            <p>Let us book your next trip!</p>
+            <div>
+                <address><ion-icon name="location-sharp"></ion-icon> Chicago, US</address>
+                <p><ion-icon name="call"></ion-icon> Phone: +238 996 39 39</p>
+                <p><ion-icon name="mail-sharp"></ion-icon> Email: vandInforma.tic@gmail.com</p>
+            </div>
+            <form action="#">
+                <input type="text" name="txtNome" id="cmpNome" placeholder="Name">
+                <input type="email" name="txtEmail" id="email" placeholder="Email">
+                <textarea name="txtMsg" id="cmpMsg" rows="3" placeholder="Message"></textarea>
+            </form>
+            <input type="button" value="send message">
+        </div>
     </section>
+    <footer>
+        <h2>Find Us On</h2>
+        <div id="social-networks">
+            <a href="https://www.facebook.com/vandy.gomes.739" target="_blank" rel="external"><ion-icon name="logo-facebook"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+            <a href="https://github.com/vandinelsonrocha" target="_blank" rel="external"><ion-icon name="logo-github"></ion-icon></a>
+            <a href="https://wa.me/2389963939?text=vim+do+github" target="_blank" rel="external"><ion-icon name="logo-whatsapp"></ion-icon></a>
+            <a href="https://www.linkedin.com/in/vandy-gomes" target="_blank" rel="external"><ion-icon name="logo-linkedin"></ion-icon></a>
+        </div>
+        <p>Powered by <a href="#">w3.css</a></p>
+        <p>Vandinelson Rocha</p>
+    </footer>
     
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 </body>
