working in the layout

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         <div id="travel">
             <form action="#" id="travel-form">
                 <h1>Travel the world with us</h1>
-                <p>From</p>
+                <p><label for="cmp1">From</label></p>
                 <input type="text" name="txt1" id="cmp1" placeholder="Departing from">
-                <p>To</p>
+                <p><label for="cmp2">To</label></p>
                 <input type="text" name="txt2" id="cmp2" placeholder="Arriving at">
                 <input type="button" value="Search and find dates">
             </form>
