finishing the site with media queries

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
                         <a href="">
                             <ion-icon name="airplane" id="airplane"></ion-icon>
                         </a>
-                        <a href="">
+                        <a href="#">
                             <li>Flight</li>
                         </a>
                     </div>
                     <div>
-                        <a href="" id="hotel">
+                        <a href="#" id="hotel">
                             <ion-icon name="bed"></ion-icon>
                             <li>Hotel</li>
                         </a>
-                        <a href="">
+                        <a href="#" id="rental">
                             <ion-icon name="car"></ion-icon>
                             <li>Rental</li>
                         </a>
@@ -47,9 +47,9 @@
         <div id="travel">
             <form action="#" id="travel-form">
                 <h1>Travel the world with us</h1>
-                <p><label for="cmp1">From</label></p>
+                <p id="from"><label for="cmp1">From</label></p>
                 <input type="text" name="txt1" id="cmp1" placeholder="Departing from">
-                <p><label for="cmp2">To</label></p>
+                <p id="to"><label for="cmp2">To</label></p>
                 <input type="text" name="txt2" id="cmp2" placeholder="Arriving at">
                 <input type="button" value="Search and find dates">
             </form>
