finishing the site with media queries

--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
     <footer>
         <h2>Find Us On</h2>
         <div id="social-networks">
-            <a href="https://www.facebook.com/vandy.gomes.739" target="_blank" rel="external"><ion-icon name="logo-facebook"></ion-icon></a>
-            <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-            <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
-            <a href="https://github.com/vandinelsonrocha" target="_blank" rel="external"><ion-icon name="logo-github"></ion-icon></a>
-            <a href="https://wa.me/2389963939?text=vim+do+github" target="_blank" rel="external"><ion-icon name="logo-whatsapp"></ion-icon></a>
-            <a href="https://www.linkedin.com/in/vandy-gomes" target="_blank" rel="external"><ion-icon name="logo-linkedin"></ion-icon></a>
+            <a href="https://www.facebook.com/vandy.gomes.739" target="_blank" rel="external" id="face"><ion-icon name="logo-facebook"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-instagram" id="insta"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-twitter" id="twitter"></ion-icon></a>
+            <a href="https://github.com/vandinelsonrocha" target="_blank" rel="external"><ion-icon name="logo-github" id="github"></ion-icon></a>
+            <a href="https://wa.me/2389963939?text=vim+do+github" target="_blank" rel="external"><ion-icon name="logo-whatsapp" id="whats"></ion-icon></a>
+            <a href="https://www.linkedin.com/in/vandy-gomes" target="_blank" rel="external"><ion-icon name="logo-linkedin" id="ldin"></ion-icon></a>
         </div>
         <p>Powered by <a href="#">w3.css</a></p>
         <p>Vandinelson Rocha</p>
